fix panel height on mobile

--- a/src/components/ui/SlidingPanel/SlidingPanel.module.css
+++ b/src/components/ui/SlidingPanel/SlidingPanel.module.css
@@ -17,7 +17,7 @@
 .panel {
   position: fixed;
   top: 0;
-  height: 100vh;
+  height: 100dvh;
   width: 50%;
   background-color: var(--tab-color);
   box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
